# stoat

./: Cargo.toml  LICENSE.md  README.md
examples/: all.stoat  concurrency.stoat  fibonacci.js  fibonacci.py  fibonacci.stoat  fibonacci_loop.js  fibonacci_loop.py  fibonacci_loop.stoat  implicit_typing.stoat  math_order.stoat  nested.stoat  primes.js  primes.stoat  test.stoat  thing.stoat  tuple_loops.stoat
src/: Cargo.toml  example_code.st  main.rs
src/cli/: Cargo.toml  lib.rs  mod.rs  run.rs
src/compiler/: Cargo.toml  error.rs  lib.rs
src/interpreter/: builtins.rs  mod.rs  scope.rs
src/interpreter/values/: mod.rs
src/interpreter/values/array/: into_iter.rs  mod.rs
src/interpreter/values/builtin_function/: mod.rs
src/interpreter/values/exclusive_range/: into_iter.rs  mod.rs
src/interpreter/values/inclusive_range/: into_iter.rs  mod.rs
src/interpreter/values/slice/: into_iter.rs  methods.rs  mod.rs
src/lexer/: Cargo.toml  error.rs  errors.rs  example_code.st  lib.rs  matchers.rs  mod.rs  token.rs
src/parser/: Cargo.toml  ast.rs  error.rs  errors.rs  expression.rs  expressions.rs  lib.rs  mod.rs  operator.rs  patterns.rs  statement.rs  statements.rs  value_type.rs
src/shared/: Cargo.toml  interner.rs  lib.rs  mod.rs  name_bihasher.rs  no_hash_map.rs  span.rs  types.rs
src/vm/: Cargo.toml  call_frame.rs  instruction.rs  lib.rs  mod.rs  program.rs  stack.rs  value.rs  variable.rs
src/vm/heap/: array.rs  const32.rs  const64.rs  consts.rs  mod.rs
