[package]
name = "stoat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.8"
miette = { version = "5.10.0", features = ["fancy"] }
once_cell = "1.18.0"
rustc-hash = "1.1.0"
thiserror = "1.0.50"

[dev-dependencies]
pretty_assertions = "1.4.0"

[profile.release]
debug = true
opt-level = 3
