[workspace.package]
name = "stoat"
version = "0.1.0"
edition = "2021"
authors = ["Im-Beast"]
repository = "https://github.com/Im-Beast/stoat"
license = "MIT"

[workspace]
members = [
	"src/",
	"src/shared",
	"src/cli",
	"src/lexer",
	"src/vm",
	"src/compiler",
	"src/parser",
]
resolver = "2"

[workspace.dependencies]
miette = { version = "5.10.0", features = ["fancy"] }
thiserror = "1.0.50"

[profile.release]
debug = true
opt-level = 3
lto = true
