[package]
name = "stoat_compiler"
description = "A compiler for Stoat"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "compiler"
path = "lib.rs"

[dependencies]
stoat_shared = { path = "../shared" }
stoat_lexer = { path = "../lexer" }
stoat_vm = { path = "../vm" }
miette.workspace = true
thiserror.workspace = true
