[package]
name = "stoat_parser"
description = "AST parser for Stoat"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "parser"
path = "lib.rs"

[dependencies]
stoat_shared = { path = "../shared" }
stoat_lexer = { path = "../lexer" }
stoat_vm = { path = "../vm" }
miette.workspace = true
thiserror.workspace = true
