[package]
name = "stoat_vm"
description = "A virtual machine used by Stoat"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "vm"
path = "lib.rs"

[dependencies]
stoat_shared = { path = "../shared" }
miette.workspace = true
